--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,13 @@ html,body,.container-fluid{
 }
 
 h1{
-	position: absolute;
+    position: absolute;
     z-index: 100;
     right: 20px;
+    text-shadow: 1px 1px 2px white;
+    padding: 10px;
+    background: rgba(255,255,255,0.2);
+    max-width: 50%;
+    color: white;
+    pointer-events: none
 }
