--- a/css/main.css
+++ b/css/main.css
@@ -6,14 +6,16 @@ html,body,.container-fluid{
 	width: 100%;
 }
 
-h1{
+#title{
     position: absolute;
     z-index: 100;
-    right: 20px;
+    width: 100%;
+}
+#title h1{
     text-shadow: 1px 1px 2px white;
-    padding: 10px;
     background: rgba(255,255,255,0.2);
-    max-width: 50%;
+    padding: 10px;
     color: white;
-    pointer-events: none
+    pointer-events: none;
+    text-align: center;
 }
